<resources>
    <string name="app_name">Recycling Collection System</string>

    <string name="empty_value" />
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="forgot_your_password_label_line"><u>Forgot your password ?</u></string>
    <string name="sign_in_btn">Login</string>
    <string name="send_btn">Send</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_label">Email</string>
    <string name="please_enter_your_email_we_will_send_otp_to_change_password_in_your_email">Please enter your email. We will send OTP to change password in your email.</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code_sent_to_your_email">Please type the verification code sent to your email.</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="verify_btn">Verify</string>
    <string name="change_password">Change password</string>
    <string name="retype_password">Retype password</string>
    <string name="save_btn">Save</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_account_create_a_new_account">Don’t have account? Create a new account</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account">Create new Account</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="become_an_environmentalist">Become an environmentalist</string>
    <string name="gift_label">Gift</string>
    <string name="place_label">Place</string>
    <string name="trading_place_label">Trading Place</string>
    <string name="transport_form_label">Transport Form</string>
    <string name="transport_form_detail_label">Transport Form Detail</string>
    <string name="home_label">Home</string>
    <string name="history_label">History</string>
    <string name="receive_form_label">Receive Form</string>
    <string name="personal_label">Personal</string>
    <string name="full_name_label">Full name</string>
    <string name="full_name_require">Full name \u002A</string>
    <string name="date_of_birth_label">Date Of Birth</string>
    <string name="identity_number_label">Identity Number</string>
    <string name="phone_number_label">Phone number</string>
    <string name="phone_number_require">Phone number \u002A</string>
    <string name="city_province_label">City/Province</string>
    <string name="district_label">District</string>
    <string name="street_label">Street</string>
    <string name="choose_your_current_city_or_province">Choose your current city or province</string>
    <string name="welcome_back_label">Welcome back!</string>
    <string name="what_can_i_got_label">What can I got?</string>
    <string name="where_i_can_recycle_label">Where I can recycle?</string>
    <string name="view_all_label"><![CDATA[View all >]]></string>
    <string name="label_total_weight">Equivalents to %s kilograms trash has been recycle, congrats!</string>
    <string name="label_total_weight_and_gift">You transported %s of garbage and %s, congrats!</string>
    <string name="garbage_label">Garbage</string>
    <string name="register_label">Register</string>
    <string name="received_label">Received</string>
    <string name="redemption_point">%d points</string>

    <!-- Place detail fragment -->
    <string name="paper">Pager</string>
    <string name="bottle">Bottle</string>
    <string name="battery">Battery</string>
    <string name="place_detail_highlights_title">Hightlights</string>
    <string name="place_detail_total_weight_title">Total weight exchanged</string>
    <string name="place_detail_total_gift_title">Total gift exchanged</string>
    <string name="place_detail_level_title">Level</string>
    <string name="place_detail_schedule_btn">Schedule</string>
    <string name="transport_id_label">Transport Id</string>
    <string name="from_agent_name">From: %s</string>


    <string name="customer_name_label">Customer Name</string>
    <string name="address_label">Address</string>
    <string name="receive_btn">Receive</string>


    <!-- Item history -->
    <string name="equivalent_weight">Equivalents to %s</string>
    <string name="agent_name">Agent : %s</string>
    <string name="staff_name">Staff %s</string>
    <string name="latest_update">Latest update %s</string>
    <string name="gift_name_label">Gift name</string>
    <string name="agent_label">Agent</string>
    <string name="staff_label">Staff</string>
    <string name="customer_label">Customer</string>
    <string name="export_label">Export</string>
    <string name="status_label">Status</string>
    <string name="evidence_label">Evidence</string>
    <string name="exchange_gift_detail_label">Exchange Gift Detail</string>
    <string name="exchange_garbage_detail_label">Exchange Garbage Detail</string>
    <string name="equivalent_label">Equivalent</string>
    <string name="id_label">Id</string>
    <string name="gift_you_may_be_like_label">Gift you may be like</string>
    <string name="business_hour_label">Open from: 8:00 – 17:30</string>
    <string name="_1_kilogram_label">1 kilogram</string>
    <string name="_100_points_label">100 points</string>


    <!-- Personal -->
    <string name="personal_logout">Log out</string>
    <string name="personal_about_us">About us</string>
    <string name="personal_policy">Policy</string>
    <string name="personal_help">Help</string>
    <string name="personal_edit_profile">Edit profile</string>

    <!-- Gift detail -->
    <string name="electronic">Electronic</string>
    <string name="available">Available</string>
    <string name="gift_detail_btn_redeem">Redeem</string>
    <string name="gift_detail_equivalents_title">Equivalents to</string>
    <string name="call_now">Call now</string>
    <string name="per_one_label">/one</string>
    <string name="save_your_life_and_our_planet_label">Save your life and our planet.</string>
    <string name="name_label">Name</string>
    <string name="submit_label">Submit</string>
    <string name="ok_label">OK</string>
    <string name="create_form_label">Create Form</string>
    <string name="redeem_gift_label">Redeem Gift</string>
    <string name="exchange_garbage_label">Exchange Garbage</string>
    <string name="exchange_btn">Exchange</string>
    <string name="complete_form_label">Complete Form</string>
    <string name="your_garbage_weight_must_be_more_than_2kg_label">\u002A Your garbage weight must be more than 2kg.</string>
    <string name="weight_label">Weight</string>
    <string name="complete_label">Complete</string>
    <string name="redeem_label">Redeem</string>

    <!-- Dashboard staff -->
    <string name="total">Total</string>
    <string name="kilograms_trash">Kilograms trash.</string>
    <string name="dashboard_staff_free">You’re free to set new schedule.</string>
    <string name="dashboard_staff_select_more"><![CDATA[Go to <ABC> tab to select\nthe most suitable schedule for you.]]></string>
    <string name="dashboard_staff_schedule">My Schedule</string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="month_year">%s/%s</string>

    <!-- Create form gift -->
    <string name="create_form_gift_term_transaction">By clicking “Place Order”, you are agreeing to Recycling Collection System’s Transaction Terms</string>
    <string name="create_form_gift_term_transaction_hyper_link_text">Recycling Collection System’s Transaction Terms</string>
    <string name="create_form_name_and_phone">%s | %s</string>
    <string name="create_form_gift_on_store">On-store</string>
    <string name="create_form_gift_shipping">Shipping</string>
    <string name="create_form_gift_warning">With the “On-store” option please visit our nearest agent store to receive your gift. Otherwise, you can pay an extra “Shipping fee*” to get your gift at home with the Shipping option.</string>
    <string name="create_form_gift_warning_note">*Contact nearest agent store to get shipping fee information.</string>
    <string name="create_form_gift_message">Message:</string>
    <string name="create_form_gift_message_hint">Please leave a message…</string>
    <string name="create_form_gift_order_total">Order total:</string>
    <string name="create_form_gift_receive_options">Receive Options</string>
    <string name="create_form_gift_total_payment">Total Payment</string>
    <string name="create_form_gift_place_order">Place Order</string>
    <string name="your_remaining_points_label">Your remaining points</string>
    <string name="personal_edit_information">Edit Information</string>
    <string name="profile_label">Profile</string>
    <string name="mark_as_complete_label">Mark as Complete!</string>
    <string name="receive_transport_form_label">Receive Transport Form</string>
    <string name="complete_transport_form_label">Complete Transport Form</string>
    <string name="available_gifts_label">Available Gifts</string>
    <string name="no_result_label">No result.</string>
    <string name="no_gift_available_label">No gift available</string>
    <string name="can">Can</string>
    <string name="plastic">Plastic</string>
    <string name="set_your_new_password_and_remember_for_next_log_in">Set your new password and remember for next log in</string>
    <string name="gift_category_label">Gift Category</string>
    <string name="personal_reset_password">Reset Passwrod</string>
</resources>
